--- a/index.html
+++ b/index.html
@@ -18,45 +18,7 @@
     .category-toggle { margin: 0 8px 12px 0; padding: 8px 14px; border-radius: 20px; border: 1px solid #ccc; background: #f7f7fb; cursor: pointer; display: inline-block; font-weight: bold;}
     .category-toggle.active { background: #9b59b6; color: #fff; border: 2px solid #7c3aed; }
     .category-bar { margin-bottom: 14px; }
-  
-  @media screen and (max-width: 600px) {
-    .flex { flex-direction: column; }
-
-    .product .col,
-    .extra .col {
-      flex: 1 1 100%;
-      min-width: unset;
-    }
-
-    .img-thumb {
-      margin: 0 auto 8px auto;
-    }
-
-    input[type="text"],
-    input[type="number"],
-    textarea {
-      font-size: 16px;
-    }
-
-    .btn {
-      width: 100%;
-      margin-top: 10px;
-    }
-
-    .category-toggle {
-      display: block;
-      margin-bottom: 10px;
-    }
-  }
-
-  .optional-extras-container {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 10px;
-    padding: 10px 0;
-    justify-content: center;
-  }
-</style>
+  </style>
 </head>
 <body>
   <h2>Car Audio Email Quote Generator</h2>
@@ -152,7 +114,6 @@
         .filter(row => row[1] && row[2] && (row[4] || row[5]))
         .map((row, idx) => ({
           id: 'prod_' + idx,
-          quantity: 1,
           checked: false,
           brand: row[1] || '',
           model: row[2] || '',
@@ -234,7 +195,6 @@
               ${p.imgUrl ? `<img src="${p.imgUrl}" class="img-thumb">` : ''}
             </div>
             <div class="col" style="flex:2;">
-<div><label>Quantity:</label><input type="number" min="1" step="1" value="1" onchange="editProductQuantityById('${p.id}', this.value)"></div>
               <b>${p.brand} ${p.model}</b> <br>
               <i>${p.desc}</i>
               <div>
@@ -274,13 +234,6 @@
     window.editProductPartsPriceById = function(id, v) { const p = products.find(x => x.id === id); if (p) p.partsPrice = parseFloat(v)||0; }
     window.editProductKeyFeatById = function(id, v) { const p = products.find(x => x.id === id); if (p) p.keyFeat = v; }
 
-    
-    window.editProductQuantityById = function(id, v) {
-      const p = products.find(x => x.id === id);
-      if (p) p.quantity = Math.max(parseInt(v) || 1, 1);
-    }
-
-
     // ---- RENDER EXTRAS ----
     function renderExtrasList() {
       const div = document.getElementById('extrasList');
@@ -313,7 +266,6 @@
               ${ex.imgUrl ? `<img src="${ex.imgUrl}" class="img-thumb">` : ''}
             </div>
             <div class="col" style="flex:2;">
-<div><label>Quantity:</label><input type="number" min="1" step="1" value="1" onchange="editProductQuantityById('${p.id}', this.value)"></div>
               <b>${ex.name}</b>
               <div>
                 <label>Extra Price:</label>
@@ -392,7 +344,7 @@
           e.checked && e.category && e.category.toLowerCase() === item.category.toLowerCase()
         );
         const itemExtrasTotal = itemExtras.reduce((t,e)=>t+e.price,0);
-        const totalInstalled = (item.price + item.install + (usePartsPrice||0)) * item.quantity + itemExtrasTotal;
+        const totalInstalled = item.price + item.install + (usePartsPrice||0) + itemExtrasTotal;
 
         productHtml += `
         <div style="font-family:Arial,sans-serif;max-width:600px;padding:10px;border:1px solid #ddd;margin-bottom:20px;">
@@ -409,7 +361,7 @@
           ${(itemExtras.length)
             ? `<div style="margin-top:10px;">
                   <p><strong>🛠 Optional Extras:</strong></p>
-                  <div class="optional-extras-container">
+                  <div style="display:flex;flex-wrap:wrap;gap:10px;padding:10px 0;">
                     ${itemExtras.map(ex => `
                       <div style="flex:1 1 calc(50% - 10px);box-sizing:border-box;text-align:center;align-items:flex-start;display:flex;flex-direction:column;justify-content:flex-start;padding:10px;border:1px solid #ccc;border-radius:8px;background-color:#f9f9f9;height:180px;">
                         ${ex.imgUrl ? `<div style="height:80px;width:100%;display:flex;align-items:center;justify-content:center;margin-bottom:5px;">
