--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
       if (p) {
         const qty = Math.max(parseInt(v) || 1, 1);
         p.quantity = qty;
-        renderExtrasList(); // re-render to test matching
+        renderExtrasList();
       }
     }
 
