--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
             : ''}
           ${(itemExtras.length)
             ? `<div style="margin-top:10px;">
-                  <p><strong>🛠 Optional Extras:</strong></p>
+                  <p><strong>🛠 Optioned Extras:</strong></p>
                   <div style="display:flex;flex-wrap:wrap;gap:10px;padding:10px 0;">
                     ${itemExtras.map(ex => `
                       <div style="flex:1 1 calc(50% - 10px);box-sizing:border-box;text-align:center;align-items:flex-start;display:flex;flex-direction:column;justify-content:flex-start;padding:10px;border:1px solid #ccc;border-radius:8px;background-color:#f9f9f9;height:180px;">
