--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
   <h3>Select Products</h3>
   <div id="productsList"></div>
   <hr>
-  <h3>Select Optional Extras</h3>
+  <h3>Select Optioned Extras</h3>
   <div id="extrasList"></div>
   <button class="btn" onclick="generateQuote()">Generate Quote</button>
   <button class="btn" onclick="copyQuote()">Copy Text Only</button>
